# alien-invasion-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run-valgrind.sh  valgrind.supp
src/: Game.cpp  Game.h  alien.cpp  alien.hpp  bullet.cpp  bullet.hpp  drawer.cpp  drawer.hpp  explosion.cpp  explosion.hpp  game.cpp  game.h  game.hpp  level.cpp  level.hpp  main.cpp  parser.cpp  parser.hpp  raygui_impl.cpp  setting.cpp  setting.hpp  ship.cpp  ship.hpp  sound_manager.cpp  sound_manager.hpp
src/Entities/: Entity.h  Ship.cpp  Ship.h  Space.cpp  Space.h
src/Screens/: GamePage.cpp  GamePage.h  HomePage.cpp  HomePage.h  Screen.h  SettingPage.cpp  SettingPage.h
src/Settings/: GameSettings.h
src/Sounds/: SoundManager.cpp  SoundManager.h
src/UI/: Button.cpp  Button.h  TextLabel.cpp  TextLabel.h
